--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ img {
     flex-wrap: wrap;
     align-items: center;
     grid-template-columns: 332px repeat( 3, auto);
+    transition:  padding .3s ease-in-out;
 }
 
 .header__lang {
@@ -800,6 +801,7 @@ img {
     }
 
     body {
+
         transition: transform .3s ease-in-out;
     }
 
@@ -835,6 +837,24 @@ img {
 
     .transition-disabled {
         transition: none;
+    }
+
+    .search-open {
+        padding-top: 160px !important;
+    }
+
+    .search__input {
+        width: 215px;
+    }
+
+    .search__form {
+        right: auto;
+        left: -200px;
+    }
+
+    .search__form.open {
+        right: auto;
+        left: 0px;
     }
 
 }
